added executionId/videos endpoint
